<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="330dp"
    android:background="@drawable/promo_layout_bg" >

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/log_in"
        android:textColor="@color/app_orange"
        android:textSize="16sp" />

    <Button
        android:id="@+id/promo_close"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10sp"
        android:background="@drawable/login_close" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/promo_close"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_layout_bg"
        android:ems="10"
        android:hint="@string/user_email"
        android:paddingLeft="25dp"
        android:textColor="@color/txt_color_gray"
        android:textColorHint="@color/txt_color_gray"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_layout_bg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="25dp"
        android:textColor="@color/txt_color_gray"
        android:textColorHint="@color/txt_color_gray"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/layoutForRememberMe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" >

        <CheckBox
            android:id="@+id/checkbox_remember_me"
            android:layout_width="18dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/chkbox_selector"
            android:button="@null"
            android:checked="true"
            android:textColor="@color/txt_color_gray" />

        <com.eliqxir.utils.CustomTextOpensansRegular
            android:id="@+id/textForTermsChkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/checkbox_remember_me"
            android:text="@string/remember_me"
            android:textColor="@color/txt_color_gray"
            android:textSize="13dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/layoutForRememberMe"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@color/app_orange"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/app_orange"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtForgotPwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/app_orange" />

</RelativeLayout>